--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <div class="container">
       <section id="main_content">
 
-<p> Gooreplacer is an Firefox/Chrome extension. </p>
+<p> Gooreplacer is a Firefox/Chrome extension. </p>
 <p> At first it's created for redirecting Google Ajax/Api/Themes to other CDN to bypass <a href="https://en.wikipedia.org/wiki/Great_Firewall">Great Firewall</a> since pages referring those are slow as molasses.</p>
 
 <p> For now, more features have been added to it, mainly:
@@ -51,7 +51,7 @@
 <a name="support-or-contact" class="anchor" href="#support-or-contact"><span class="octicon octicon-link"></span></a>Support</h2>
 
 <p>You can find more guides in <a href="https://github.com/jiacai2050/gooreplacer4chrome/blob/master/README-en.md">Github README</a>.
-<p>And if you have any question or suggestion, welcome to <a href="https://github.com/jiacai2050/gooreplacer4chrome/issues">open a issue</a> or <a href="mailto:jiacai2050@gmail.com?subject=gooreplacer suggestion">file me an email</a>. Thank you for your time. </p>
+<p>And if you have any questions or suggestions, welcome to <a href="https://github.com/jiacai2050/gooreplacer4chrome/issues">open a issue</a> or <a href="mailto:jiacai2050@gmail.com?subject=gooreplacer suggestion">file me an email</a>. Thank you for your time. </p>
 
 <div id="disqus_thread"></div>
 <script type="text/javascript">
