--- a/index.html
+++ b/index.html
@@ -36,9 +36,9 @@
         <li>A new UI built with ClojureScript + Reagent ❤️</li>
     </ol>
 
-<p>I think gooreplacer stands out from other similar extensions for ease-of-use. Why not give it a try?</p>
+<p>Most users prefer gooreplacer than other similar extensions for ease-of-use. Why not give it a try?</p>
 
-<img src="images/ui.png">
+<img src="images/ui.png" alt="gooreplacer new ui">
 <h2>
 <a name="downloads" class="anchor" href="#downloads"><span class="octicon octicon-link"></span></a>Downloads</h2>
 
@@ -51,7 +51,7 @@
 <a name="support-or-contact" class="anchor" href="#support-or-contact"><span class="octicon octicon-link"></span></a>Support</h2>
 
 <p>You can find more guides in <a href="https://github.com/jiacai2050/gooreplacer4chrome/blob/master/README-en.md">Github README</a>.
-<p>And if you have any questions or suggestions, welcome to <a href="https://github.com/jiacai2050/gooreplacer4chrome/issues">open a issue</a> or <a href="mailto:jiacai2050@gmail.com?subject=gooreplacer suggestion">file me an email</a>. Thank you for your time. </p>
+<p>And if you have any questions or suggestions, welcome to <a href="https://github.com/jiacai2050/gooreplacer4chrome/issues">open an issue</a> or <a href="mailto:jiacai2050@gmail.com?subject=gooreplacer suggestion">file me an email</a>. Thank you for your time. </p>
 
 <div id="disqus_thread"></div>
 <script type="text/javascript">
