--- a/index.html
+++ b/index.html
@@ -18,31 +18,31 @@
     <header>
       <div class="container">
         <h1>gooreplacer</h1>
-        <h2>Redirect, block Requests; Modify, cancel request/response Headers :-)</h2>
+        <h2>A Firefox/Chrome extension to modify HTTP requests :-)</h2>
       </div>
     </header>
 
     <div class="container">
       <section id="main_content">
 
-<p> Gooreplacer is a Firefox/Chrome extension. </p>
 <p> At first it's created for redirecting Google Ajax/Api/Themes to other CDN to bypass <a href="https://en.wikipedia.org/wiki/Great_Firewall">Great Firewall</a> since pages referring those are slow as molasses.</p>
 
 <p> For now, more features have been added to it, mainly:
     <ol>
         <li>Block url</li>
         <li>Modify Headers</li>
-        <li>Test user-defined rule</li>
+        <li>Test user-defined rules</li>
+        <li>Export/Import rules, sync between Firefox and Chrome</li>
         <li>A new UI built with ClojureScript + Reagent ❤️</li>
     </ol>
 
-<p>Most users prefer gooreplacer than other similar extensions for ease-of-use. Why not give it a try?</p>
+<p>Most users prefer gooreplacer than other similar extensions(HTTPS Everywhere/Redirector) for ease-of-use. Why not give it a try?</p>
 
 <img src="images/ui.png" alt="gooreplacer new ui">
 <h2>
 <a name="downloads" class="anchor" href="#downloads"><span class="octicon octicon-link"></span></a>Downloads</h2>
 
-<section id="downloads">
+<section id="download">
   <a href="https://chrome.google.com/webstore/detail/gooreplacer/jnlkjeecojckkigmchmfoigphmgkgbip" class="btn">Chrome</a>
   <a href="https://addons.mozilla.org/firefox/addon/gooreplacer/" class="btn">Firefox</a>
 </section>
