add i18n support. close #50

--- a/cljs-src/resources/dev/option/index.html
+++ b/cljs-src/resources/dev/option/index.html
@@ -1,13 +1,15 @@
 <!DOCTYPE html>
 <html>
-  <head lang="en">
+  <head>
     <link rel="shortcut icon" href="img/gooreplacer.ico" type="image/x-icon">
     <link rel="icon" href="img/gooreplacer.ico" type="image/x-icon">
     <meta charset="utf-8">
+    <!-- https://github.com/facebook/react/tree/master/packages/react-devtools#usage-with-react-dom -->
+    <script src="http://localhost:8097"></script>
     <script type="text/javascript" src="js/goog/base.js"></script>
     <script type="text/javascript" src="js/cljs_deps.js"></script>
     <link rel="stylesheet" type="text/css" href="css/main.css">
-    <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/antd@3.0.3/dist/antd.min.css">
+    <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/antd@3.8.0/dist/antd.min.css">
     <meta charset="UTF-8">
     <title>Gooreplacer</title>
   </head>
