--- a/cljs-src/resources/release/option/index.html
+++ b/cljs-src/resources/release/option/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
-  <head lang="en">
+  <head>
     <meta charset="utf-8">
     <link rel="shortcut icon" href="img/gooreplacer.ico" type="image/x-icon">
     <link rel="icon" href="img/gooreplacer.ico" type="image/x-icon">
     <link rel="stylesheet" type="text/css" href="css/main.css">
-    <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/antd@3.0.3/dist/antd.min.css">
+    <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/antd@3.8.0/dist/antd.min.css">
     <title>Gooreplacer</title>
   </head>
   <body>
