add 3.11 new ui

--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
     <link rel="shortcut icon" href="images/favicon.ico" />
 
     <meta name="description" content="Redirect, block Requests; Modify, cancel request/response Headers" />
-    <title>gooreplacer</title>
+    <title>Gooreplacer</title>
     
   </head>
 
   <body>
-    <a href="https://github.com/jiacai2050/gooreplacer4chrome"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://camo.githubusercontent.com/e7bbb0521b397edbd5fe43e7f760759336b5e05f/68747470733a2f2f73332e616d617a6f6e6177732e636f6d2f6769746875622f726962626f6e732f666f726b6d655f72696768745f677265656e5f3030373230302e706e67" alt="Fork me on GitHub" data-canonical-src="https://s3.amazonaws.com/github/ribbons/forkme_right_green_007200.png"></a>
+    <a href="https://github.com/jiacai2050/gooreplacer"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://camo.githubusercontent.com/e7bbb0521b397edbd5fe43e7f760759336b5e05f/68747470733a2f2f73332e616d617a6f6e6177732e636f6d2f6769746875622f726962626f6e732f666f726b6d655f72696768745f677265656e5f3030373230302e706e67" alt="Fork me on GitHub" data-canonical-src="https://s3.amazonaws.com/github/ribbons/forkme_right_green_007200.png"></a>
     <header>
       <div class="container">
         <h1>gooreplacer</h1>
@@ -24,21 +24,23 @@
 
     <div class="container">
       <section id="main_content">
+        <p><a href="http://fanyi.baidu.com/transpage?query=liujiacai.net%2Fgooreplacer&from=en&to=zh&source=url&render=1">中文版</a></p>
+        
+<p> At first, Gooreplacer was created for redirecting Google Ajax/Api/Themes to other CDN to bypass <a href="https://en.wikipedia.org/wiki/Great_Firewall">Great Firewall</a> since pages referring those are slow as molasses.</p>
 
-<p> At first it's created for redirecting Google Ajax/Api/Themes to other CDN to bypass <a href="https://en.wikipedia.org/wiki/Great_Firewall">Great Firewall</a> since pages referring those are slow as molasses.</p>
-
-<p> For now, more features have been added to it, mainly:
+<p> More features have been added since then, mainly:
     <ol>
-        <li>Block url</li>
-        <li>Modify Headers</li>
-        <li>Test user-defined rules</li>
+        <li>block/redirect URLs based on user-defined rules</li>
+        <li>block/modify headers based on user-defined rules</li>
+        <li>Test rules in sandbox</li>
+        <li>i18n (English + 中文)</li>
         <li>Export/Import rules, sync between Firefox and Chrome</li>
         <li>A new UI built with ClojureScript + Reagent ❤️</li>
     </ol>
 
 <p>Most users prefer gooreplacer than other similar extensions(HTTPS Everywhere/Redirector) for ease-of-use. Why not give it a try?</p>
 
-<img src="images/ui.png" alt="gooreplacer new ui">
+<img src="images/ui-3.11.png" alt="gooreplacer new ui">
 <h2>
 <a name="downloads" class="anchor" href="#downloads"><span class="octicon octicon-link"></span></a>Downloads</h2>
 
@@ -50,8 +52,8 @@
 <h2>
 <a name="support-or-contact" class="anchor" href="#support-or-contact"><span class="octicon octicon-link"></span></a>Support</h2>
 
-<p>You can find more guides in <a href="https://github.com/jiacai2050/gooreplacer4chrome/blob/master/README-en.md">Github README</a>.
-<p>And if you have any questions or suggestions, welcome to <a href="https://github.com/jiacai2050/gooreplacer4chrome/issues">open an issue</a> or <a href="mailto:jiacai2050@gmail.com?subject=gooreplacer suggestion">file me an email</a>. Thank you for your time. </p>
+<p>You can find more guides in <a href="https://github.com/jiacai2050/gooreplacer/blob/master/README-en.md">Github README</a>.
+<p>And if you have any questions or suggestions, welcome to <a href="https://github.com/jiacai2050/gooreplacer/issues">open an issue</a> or <a href="mailto:jiacai2050@gmail.com?subject=gooreplacer suggestion">file me an email</a>. Thank you for your time. </p>
 
 <div id="disqus_thread"></div>
 <script type="text/javascript">
