--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
     <meta name="description" content="Redirect, block Requests; Modify, cancel request/response Headers" />
     <title>Gooreplacer</title>
-    
+
   </head>
 
   <body>
@@ -18,58 +18,85 @@
     <header>
       <div class="container">
         <h1>gooreplacer</h1>
-        <h2>A Firefox/Chrome extension to modify HTTP requests :-)</h2>
+        <h2>A browser extension to modify HTTP requests :-)</h2>
       </div>
     </header>
 
     <div class="container">
       <section id="main_content">
         <p><a href="http://fanyi.baidu.com/transpage?query=liujiacai.net%2Fgooreplacer&from=en&to=zh&source=url&render=1">中文版</a></p>
-        
-<p> At first, Gooreplacer was created for redirecting Google Ajax/Api/Themes to other CDN to bypass <a href="https://en.wikipedia.org/wiki/Great_Firewall">Great Firewall</a> since pages referring those are slow as molasses.</p>
 
-<p> More features have been added since then, mainly:
-    <ol>
-        <li>block/redirect URLs based on user-defined rules</li>
-        <li>block/modify headers based on user-defined rules</li>
-        <li>Test rules in sandbox</li>
-        <li>i18n (English + 中文)</li>
-        <li>Export/Import rules, sync between Firefox and Chrome</li>
-        <li>A new UI built with ClojureScript + Reagent ❤️</li>
-    </ol>
+        <p> At first, Gooreplacer was created for redirecting Google Ajax/Api/Themes to other CDN to bypass <a href="https://en.wikipedia.org/wiki/Great_Firewall">Great Firewall</a> since pages referring those are slow as molasses.</p>
 
-<p>Most users prefer gooreplacer than other similar extensions(HTTPS Everywhere/Redirector) for ease-of-use. Why not give it a try?</p>
+        <p> More features have been added since then, mainly:
+          <ol>
+            <li>block/redirect URLs based on user-defined rules</li>
+            <li>block/modify headers based on user-defined rules</li>
+            <li>Test rules in sandbox</li>
+            <li>i18n (English + 中文)</li>
+            <li>Export/Import rules, sync between Firefox/Chrome/Edge...</li>
+            <li>A new UI built with ClojureScript + Reagent ❤️</li>
+          </ol>
 
-<img src="images/ui-3.11.png" alt="gooreplacer new ui">
-<h2>
-<a name="downloads" class="anchor" href="#downloads"><span class="octicon octicon-link"></span></a>Downloads</h2>
+        <p>Most users prefer gooreplacer than other similar extensions(HTTPS Everywhere/Redirector) for ease-of-use. Why not give it a try?</p>
 
-<section id="download">
-  <a href="https://chrome.google.com/webstore/detail/gooreplacer/jnlkjeecojckkigmchmfoigphmgkgbip" class="btn">Chrome</a>
-  <a href="https://addons.mozilla.org/firefox/addon/gooreplacer/" class="btn">Firefox</a>
-</section>
+        <img src="images/ui-3.11.png" alt="gooreplacer new ui">
 
-<h2>
-<a name="support-or-contact" class="anchor" href="#support-or-contact"><span class="octicon octicon-link"></span></a>Support</h2>
+        <h2>
+          <a name="downloads" class="anchor" href="#downloads"><span class="octicon octicon-link"></span></a>Downloads</h2>
 
-<p>You can find more guides in <a href="https://github.com/jiacai2050/gooreplacer/blob/master/README-en.md">Github README</a>.
-<p>And if you have any questions or suggestions, welcome to <a href="https://github.com/jiacai2050/gooreplacer/issues">open an issue</a> or <a href="mailto:jiacai2050@gmail.com?subject=gooreplacer suggestion">file me an email</a>. Thank you for your time. </p>
+        <section id="download" style="width:50%">
+          <table>
+            <thead>
+              <tr>
+                <th>Browser</th>
+                <th>Rate</th>
+                <th>Users</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr>
+                <td><a href="https://chrome.google.com/webstore/detail/gooreplacer/jnlkjeecojckkigmchmfoigphmgkgbip"><img alt="Chrome Web Store" src="https://img.shields.io/chrome-web-store/v/jnlkjeecojckkigmchmfoigphmgkgbip.svg?style=plastic" /></a></td>
+                <td><a href="https://chrome.google.com/webstore/detail/gooreplacer/jnlkjeecojckkigmchmfoigphmgkgbip"><img alt="Chrome Web Store" src="https://img.shields.io/chrome-web-store/rating/jnlkjeecojckkigmchmfoigphmgkgbip.svg?style=plastic" /></a></td>
+                <td><a href="https://chrome.google.com/webstore/detail/gooreplacer/jnlkjeecojckkigmchmfoigphmgkgbip"><img alt="Chrome Web Store" src="https://img.shields.io/chrome-web-store/users/jnlkjeecojckkigmchmfoigphmgkgbip.svg?style=plastic" /></a></td>
+              </tr>
+              <tr>
+                <td><a href="https://addons.mozilla.org/firefox/addon/gooreplacer/"><img alt="Mozilla Add-on" src="https://img.shields.io/amo/v/gooreplacer.svg?style=plastic" /></a></td>
+                <td><a href="https://addons.mozilla.org/firefox/addon/gooreplacer/"><img alt="Mozilla Add-on" src="https://img.shields.io/amo/rating/gooreplacer.svg?style=plastic" /></a></td>
+                <td><a href="https://addons.mozilla.org/firefox/addon/gooreplacer/"><img alt="Mozilla Add-on" src="https://img.shields.io/amo/users/gooreplacer.svg?style=plastic" /></a></td>
+              </tr>
+              <tr>
+                <td><a href="https://microsoftedge.microsoft.com/addons/detail/gooreplacer/cidbonnpjopamnhfjdgfcmjmlmehjnej"><img alt="Microsoft Edge" src="https://img.shields.io/badge/dynamic/json?label=edge%20add-on&amp;prefix=v&amp;query=%24.version&amp;url=https%3A%2F%2Fmicrosoftedge.microsoft.com%2Faddons%2Fgetproductdetailsbycrxid%2Fcidbonnpjopamnhfjdgfcmjmlmehjnej" /></a></td>
+                <td><a href="https://microsoftedge.microsoft.com/addons/detail/gooreplacer/cidbonnpjopamnhfjdgfcmjmlmehjnej"><img alt="Microsoft Edge" src="https://img.shields.io/badge/dynamic/json?label=rating&amp;suffix=/5&amp;query=%24.averageRating&amp;url=https%3A%2F%2Fmicrosoftedge.microsoft.com%2Faddons%2Fgetproductdetailsbycrxid%2Fcidbonnpjopamnhfjdgfcmjmlmehjnej" /></a></td>
+                <td></td>
+              </tr>
+            </tbody>
+          </table>
+          <!-- <a href="https://chrome.google.com/webstore/detail/gooreplacer/jnlkjeecojckkigmchmfoigphmgkgbip" class="btn">Chrome</a> -->
+          <!-- <a href="https://addons.mozilla.org/firefox/addon/gooreplacer/" class="btn">Firefox</a> -->
+        </section>
 
-<div id="disqus_thread"></div>
-<script type="text/javascript">
+        <h2>
+          <a name="support-or-contact" class="anchor" href="#support-or-contact"><span class="octicon octicon-link"></span></a>Support</h2>
 
-    var duoshuoQuery = {short_name:"gooreplacer"};
-    (function() {
-        var d = document, s = d.createElement('script');
-        s.src = '//gooreplacer.disqus.com/embed.js';
-        s.setAttribute('data-timestamp', +new Date());
-        (d.head || d.body).appendChild(s);
-    })();
-    var _bdhmProtocol = (("https:" == document.location.protocol) ? " https://" : " http://");
-    document.write(unescape("%3Cscript src='" + _bdhmProtocol + "hm.baidu.com/h.js%3Fb0b1b4cd028dcda54126eddc8346a00c' type='text/javascript'%3E%3C/script%3E"));
-    var cnzz_protocol = (("https:" == document.location.protocol) ? " https://" : " http://");
-    document.write(unescape("%3Cspan id='cnzz_stat_icon_1254310123'%3E%3C/span%3E%3Cscript src='" + cnzz_protocol + "s11.cnzz.com/stat.php%3Fid%3D1254310123%26show%3Dpic1' type='text/javascript'%3E%3C/script%3E"));
-</script>
-<script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-59fc76f572235789"></script> 
+        <p>You can find more guides in <a href="https://github.com/jiacai2050/gooreplacer/blob/master/README-en.md">Github README</a>.
+        <p>And if you have any questions or suggestions, welcome to <a href="https://github.com/jiacai2050/gooreplacer/issues">open an issue</a> or <a href="mailto:jiacai2050@gmail.com?subject=gooreplacer suggestion">file me an email</a>. Thank you for your time. </p>
+
+        <div id="disqus_thread"></div>
+        <script type="text/javascript">
+
+          var duoshuoQuery = {short_name:"gooreplacer"};
+          (function() {
+            var d = document, s = d.createElement('script');
+            s.src = '//gooreplacer.disqus.com/embed.js';
+            s.setAttribute('data-timestamp', +new Date());
+            (d.head || d.body).appendChild(s);
+          })();
+          var _bdhmProtocol = (("https:" == document.location.protocol) ? " https://" : " http://");
+          document.write(unescape("%3Cscript src='" + _bdhmProtocol + "hm.baidu.com/h.js%3Fb0b1b4cd028dcda54126eddc8346a00c' type='text/javascript'%3E%3C/script%3E"));
+          var cnzz_protocol = (("https:" == document.location.protocol) ? " https://" : " http://");
+          document.write(unescape("%3Cspan id='cnzz_stat_icon_1254310123'%3E%3C/span%3E%3Cscript src='" + cnzz_protocol + "s11.cnzz.com/stat.php%3Fid%3D1254310123%26show%3Dpic1' type='text/javascript'%3E%3C/script%3E"));
+        </script>
+        <script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-59fc76f572235789"></script>
   </body>
 </html>
