add darkmode / popup page

--- a/cljs-src/resources/release/ui/option.html
+++ b/cljs-src/resources/release/ui/option.html
@@ -2,15 +2,16 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <link rel="shortcut icon" href="img/gooreplacer.ico" type="image/x-icon">
-    <link rel="icon" href="img/gooreplacer.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="img/32.png" type="image/x-icon">
+    <link rel="icon" href="img/32.png" type="image/x-icon">
     <link rel="stylesheet" type="text/css" href="css/main.css">
     <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/antd@3.8.0/dist/antd.min.css">
+    <script src="https://cdn.jsdelivr.net/npm/darkreader@4.9.17/darkreader.min.js"></script>
     <title>Gooreplacer</title>
   </head>
   <body>
     <div id="app"></div>
-    <script type="text/javascript" src="main.js"></script>
+    <script type="text/javascript" src="option.js"></script>
     <input type="file" id="gsonChooser" accept=".gson" style="display:none" />
   </body>
 </html>
