--- a/cljs-src/resources/dev/ui/option.html
+++ b/cljs-src/resources/dev/ui/option.html
@@ -1,21 +1,21 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <link rel="shortcut icon" href="img/gooreplacer.ico" type="image/x-icon">
-    <link rel="icon" href="img/gooreplacer.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="img/32.png" type="image/x-icon">
+    <link rel="icon" href="img/32.png" type="image/x-icon">
     <meta charset="utf-8">
     <!-- https://github.com/facebook/react/tree/master/packages/react-devtools#usage-with-react-dom -->
     <script src="http://localhost:8097"></script>
-    <script type="text/javascript" src="js/goog/base.js"></script>
-    <script type="text/javascript" src="js/cljs_deps.js"></script>
-    <link rel="stylesheet" type="text/css" href="css/main.css">
+    <script type="text/javascript" src="compiled-js/option/goog/base.js"></script>
+    <script type="text/javascript" src="compiled-js/option/cljs_deps.js"></script>
     <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/antd@3.8.0/dist/antd.min.css">
+    <script src="https://cdn.jsdelivr.net/npm/darkreader@4.9.17/darkreader.min.js"></script>
     <meta charset="UTF-8">
     <title>Gooreplacer</title>
   </head>
   <body>
     <div id="app"></div>
-    <script type="text/javascript" src="init.js"></script>
+    <script type="text/javascript" src="init-option.js"></script>
     <input type="file" id="gsonChooser" accept=".gson" style="display:none" />
   </body>
 </html>
