local host css/js file

--- a/cljs-src/resources/dev/ui/option.html
+++ b/cljs-src/resources/dev/ui/option.html
@@ -8,14 +8,14 @@
     <script src="http://localhost:8097"></script>
     <script type="text/javascript" src="compiled-js/option/goog/base.js"></script>
     <script type="text/javascript" src="compiled-js/option/cljs_deps.js"></script>
-    <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/antd@3.8.0/dist/antd.min.css">
-    <script src="https://cdn.jsdelivr.net/npm/darkreader@4.9.17/darkreader.min.js"></script>
+    <link rel="stylesheet" type="text/css" href="css/antd.min.css">
+    <script src="js/darkreader.min.js"></script>
     <meta charset="UTF-8">
     <title>Gooreplacer</title>
   </head>
   <body>
     <div id="app"></div>
     <script type="text/javascript" src="init-option.js"></script>
-    <input type="file" id="gsonChooser" accept=".gson" style="display:none" />
+    <input type="file" id="jsonChooser" accept=".json" style="display:none" />
   </body>
 </html>
