--- a/cljs-src/resources/dev/ui/popup.html
+++ b/cljs-src/resources/dev/ui/popup.html
@@ -8,9 +8,9 @@
     <script src="http://localhost:8097"></script>
     <script type="text/javascript" src="compiled-js/popup/goog/base.js"></script>
     <script type="text/javascript" src="compiled-js/popup/cljs_deps.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/darkreader@4.9.17/darkreader.min.js"></script>
+    <script src="js/darkreader.min.js"></script>
     <link rel="stylesheet" type="text/css" href="css/main.css">
-    <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/antd@3.8.0/dist/antd.min.css">
+    <link rel="stylesheet" type="text/css" href="css/antd.min.css">
     <meta charset="UTF-8">
     <title>Gooreplacer</title>
   </head>
