--- a/cljs-src/resources/release/ui/option.html
+++ b/cljs-src/resources/release/ui/option.html
@@ -5,13 +5,13 @@
     <link rel="shortcut icon" href="img/32.png" type="image/x-icon">
     <link rel="icon" href="img/32.png" type="image/x-icon">
     <link rel="stylesheet" type="text/css" href="css/main.css">
-    <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/antd@3.8.0/dist/antd.min.css">
-    <script src="https://cdn.jsdelivr.net/npm/darkreader@4.9.17/darkreader.min.js"></script>
+    <link rel="stylesheet" type="text/css" href="css/antd.min.css">
+    <script src="js/darkreader.min.js"></script>
     <title>Gooreplacer</title>
   </head>
   <body>
     <div id="app"></div>
     <script type="text/javascript" src="option.js"></script>
-    <input type="file" id="gsonChooser" accept=".gson" style="display:none" />
+    <input type="file" id="jsonChooser" accept=".json" style="display:none" />
   </body>
 </html>
