--- a/cljs-src/resources/release/ui/popup.html
+++ b/cljs-src/resources/release/ui/popup.html
@@ -4,8 +4,8 @@
     <link rel="shortcut icon" href="img/32.png" type="image/x-icon">
     <link rel="icon" href="img/32.png" type="image/x-icon">
     <meta charset="utf-8">
-    <script src="https://cdn.jsdelivr.net/npm/darkreader@4.9.17/darkreader.min.js"></script>
-    <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/antd@3.8.0/dist/antd.min.css">
+    <script src="js/darkreader.min.js"></script>
+    <link rel="stylesheet" type="text/css" href="css/antd.min.css">
     <meta charset="UTF-8">
     <title>Gooreplacer</title>
   </head>
